Add a button to change time 12 to 24 hours

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
             <span class="text">Seconds</span>
         </div>
 
-        <div class="time">
-            <span id="am">AM</span>
+        <div class="time" id="bn">
+            <p class="links"></p>
         </div>
     </div>
+
     <button class="switch-btn" id="btn">
         12 Hour
       </button>
